--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,11 @@
     <string name="app_name">Space of a day</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
     <string name="title_activity_settings">Settings</string>
+
+    <string name="menu_title_home">Home</string>
+    <string name="menu_title_archive">Archive</string>
+    <string name="menu_title_settings">Settings</string>
 
     <!-- Strings related to Settings -->
 
